# bee-agent

./: .gitignore  LICENSE  README.md  README_UNIFIED_SERVER.md  bee_server.py  claude_desktop_config.example.json  install-openclaw.sh  requirements.txt  setup.sh
mcp_server/: bee_mcp_server.py  pyproject.toml
skill/: SKILL.md
standalone_agent/: bee_actions.py  bee_classifier.py  bee_monitor.py  com.openclaw.bee-monitor.plist
