[project]
name = "bee-mcp-server"
version = "1.0.0"
description = "Hybrid MCP server for the Bee wearable AI — real-time SSE streaming + full bee-cli integration for Claude"
readme = "../README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["bee", "wearable", "mcp", "claude", "ai", "real-time"]
dependencies = [
    "mcp[cli]>=1.4.0",
    "pydantic>=2.0.0",
]

[project.scripts]
bee-mcp-server = "bee_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
